# serializer version: 1
# name: test_frame_rendering[arrow]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">$1.00</td>
      <td class="gt_row gt_left">a</td>
      <td class="gt_row gt_right">4</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">$2.00</td>
      <td class="gt_row gt_left">b</td>
      <td class="gt_row gt_right">5</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">$3.00</td>
      <td class="gt_row gt_left">c</td>
      <td class="gt_row gt_right">6</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_frame_rendering[pandas]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">$1.00</td>
      <td class="gt_row gt_center">a</td>
      <td class="gt_row gt_right">4</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">$2.00</td>
      <td class="gt_row gt_center">b</td>
      <td class="gt_row gt_right">5</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">$3.00</td>
      <td class="gt_row gt_center">c</td>
      <td class="gt_row gt_right">6</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_frame_rendering[polars]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">$1.00</td>
      <td class="gt_row gt_left">a</td>
      <td class="gt_row gt_right">4</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">$2.00</td>
      <td class="gt_row gt_left">b</td>
      <td class="gt_row gt_right">5</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">$3.00</td>
      <td class="gt_row gt_left">c</td>
      <td class="gt_row gt_right">6</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_validate_frame_non_str_cols_warning
  '''
  pandas DataFrame contains non-string column names. Coercing to strings. Here are the first few non-string columns:
  
    * Position 1: 55
    * Position 3: 99
  '''
# ---
